# self-balancing-robot-sim

./: README.md
balancing_robot/: CMakeLists.txt  package.xml
balancing_robot/config/: joint_names_balancing_robot.yaml
balancing_robot/launch/: display.launch.py
balancing_robot/meshes/: base_link.STL  chassis_link.STL  left_wheel_link.STL  right_wheel_link.STL
balancing_robot/urdf/: balancing_robot.csv  balancing_robot.urdf
